--- a/web/src/main/resources/static/type.html
+++ b/web/src/main/resources/static/type.html
@@ -57,4 +57,10 @@
     </div>
 </div>
 </body>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+
+    });
+</script>
 </html>
