--- a/web/src/main/resources/static/index.html
+++ b/web/src/main/resources/static/index.html
@@ -14,6 +14,7 @@
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/common.js" type="text/javascript"></script>
     <script src="js/head.js" type="text/javascript"></script>
     <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
@@ -25,11 +26,11 @@
     <div class="row navigation-list" style="margin-top: 10px">
     </div>
 
-    <div class="row interval">
+    <div class="row interval recommend">
         <span>猜你喜欢...</span>
     </div>
 
-    <div class="row content">
+    <div class="row content recommend">
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
                 <img src="images/timg.jpeg" alt="...">
@@ -60,6 +61,38 @@
             </div>
         </div>
     </div>
+
+    <div class="row interval">
+        <span>最近上映</span>
+    </div>
+    
+    <div class="row content">
+        
+    </div>
 </div>
 </body>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $.ajax({
+            type:"get",
+            url:"/user/login?account="+account+"&password="+password,
+            data:null,
+            async: false,
+            success:function(response){
+                var code = response.code;
+                if(code == 200){
+                    let user = response.data;
+                    storage.typeJson.putJson(KEY_USER,user);
+
+                    window.location.href = "/index.html";
+                }else {
+                    alert("登陆失败，请重新登陆");
+                }
+
+            },
+            error:function(response){
+
+            }
+        });    });
+</script>
 </html>
