--- a/web/src/main/resources/static/login.html
+++ b/web/src/main/resources/static/login.html
@@ -9,14 +9,18 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/toastr.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
+    <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/common.js" type="text/javascript"></script>
     <script src="js/head.js" type="text/javascript"></script>
     <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <script src="js/toastr.min.js" type="text/javascript"></script>
 </head>
 <body>
 <div style="position: absolute;width: 100%;height: 100%;background-color: deeppink">
@@ -29,7 +33,7 @@
                 <div class="col-md-12">
                     <div class="input-group">
                         <span class="input-group-addon" id="basic-addon1">账号</span>
-                        <input type="text" class="form-control" placeholder="请输入你的账号" aria-describedby="basic-addon1">
+                        <input id="account" type="text" class="form-control" placeholder="请输入你的账号" aria-describedby="basic-addon1">
                     </div>
                 </div>
             </div>
@@ -37,16 +41,58 @@
                 <div class="col-md-12">
                     <div class="input-group">
                         <span class="input-group-addon" id="basic-addon2">密码</span>
-                        <input type="text" class="form-control" placeholder="请输入你的密码" aria-describedby="basic-addon1">
+                        <input type="text" id="password" class="form-control" placeholder="请输入你的密码" aria-describedby="basic-addon1">
                     </div>
                 </div>
             </div>
             <div class="row" style="text-align: center;margin-top: 20px">
-                <button class="btn btn-success btn-group btn-group-lg" role="group" type="button">登陆</button>
+                <button class="btn btn-success btn-group btn-group-lg" role="group" type="button" id="login">登陆</button>
             </div>
         </div>
         <div class="container-fluid login-foot"></div>
     </div>
 </div>
 </body>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $("#login").on("click",function () {
+            let account = $("#account").val();
+            let password = $("#password").val();
+            if(account == null || account == ""){
+                alert("账号不能为空");
+                return;
+            }
+
+            if(password == null || password == ""){
+                alert("密码不能为空");
+                return;
+            }
+
+            $.ajax({
+                type:"get",
+                url:"/user/login?account="+account+"&password="+password,
+                data:null,
+                async: false,
+                success:function(response){
+                    var code = response.code;
+                    if(code == 200){
+                        let user = response.data;
+                        storage.typeJson.putJson(KEY_USER,user);
+
+                        window.location.href = "/index.html";
+                    }else {
+                        alert("登陆失败，请重新登陆");
+                    }
+
+                },
+                error:function(response){
+
+                }
+            });
+
+
+        })
+    });
+</script>
 </html>
