--- a/web/src/main/resources/static/index.html
+++ b/web/src/main/resources/static/index.html
@@ -13,11 +13,12 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
+    <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/common.js" type="text/javascript"></script>
     <script src="js/head.js" type="text/javascript"></script>
-    <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <script src="js/html5shiv.js"></script>
+    <script src="js/respond.min.js"></script>
 </head>
 <body>
 <div class="container-fluid" id="head-page"></div>
@@ -33,30 +34,30 @@
     <div class="row content recommend">
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-                <img src="images/timg.jpeg" alt="...">
+                <img class="movie-logo" src="images/timg.jpeg" alt="...">
                 <div class="caption">
                     <h3>Thumbnail label</h3>
-                    <p><a href="video.html" class="btn btn-primary" role="button">Button</a></p>
+                    <p><a href="video.html" class="btn btn-primary" role="button">观看</a></p>
                 </div>
             </div>
         </div>
 
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-                <img src="images/timg.jpeg" alt="...">
+                <img class="movie-logo" src="images/timg.jpeg" alt="...">
                 <div class="caption">
                     <h3>Thumbnail label</h3>
-                    <p><a href="video.html" class="btn btn-primary" role="button">Button</a></p>
+                    <p><a href="video.html" class="btn btn-primary" role="button">观看</a></p>
                 </div>
             </div>
         </div>
 
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-                <img src="images/timg.jpeg" alt="...">
+                <img class="movie-logo" src="images/timg.jpeg" alt="...">
                 <div class="caption">
                     <h3>Thumbnail label</h3>
-                    <p><a href="video.html" class="btn btn-primary" role="button">Button</a></p>
+                    <p><a href="video.html" class="btn btn-primary" role="button">观看</a></p>
                 </div>
             </div>
         </div>
@@ -66,13 +67,57 @@
         <span>最近上映</span>
     </div>
     
-    <div class="row content">
-        
+    <div class="row content" id="home-data">
+<!--        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img class="movie-logo" src="images/timg.jpeg" alt="...">
+                <div class="caption">
+                    <h3>Thumbnail label</h3>
+                    <p><a href="video.html" class="btn btn-primary" role="button">观看</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img class="movie-logo" src="images/timg.jpeg" alt="...">
+                <div class="caption">
+                    <h3>Thumbnail label</h3>
+                    <p><a href="video.html" class="btn btn-primary" role="button">观看</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img class="movie-logo" src="images/timg.jpeg" alt="...">
+                <div class="caption">
+                    <h3>Thumbnail label</h3>
+                    <p><a href="video.html" class="btn btn-primary" role="button">观看</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img class="movie-logo" src="images/timg.jpeg" alt="...">
+                <div class="caption">
+                    <h3>Thumbnail label</h3>
+                    <p><a href="video.html" class="btn btn-primary" role="button">观看</a></p>
+                </div>
+            </div>
+        </div>-->
     </div>
 </div>
 </body>
 <script type="text/javascript">
     $(document).ready(function () {
+
+        var u = window.storage.typeJson.getJsonByKey("user");
+        if(u != null && u != "") {
+            loadRecommedation(u);
+        }
+
+        loadHomePage();
+
+/*
         $.ajax({
             type:"get",
             url:"/user/login?account="+account+"&password="+password,
@@ -93,6 +138,42 @@
             error:function(response){
 
             }
-        });    });
+        });   */
+    });
+
+    var loadRecommedation = function (user) {
+        //TODO 获取推荐信息
+    }
+
+    var loadHomePage = function () {
+        $.ajax({
+            type:"get",
+            url:"/movie/all",
+            async:true,
+            success:function (response) {
+                var  code = response.code;
+                var  parentNode = $("#home-data");
+                if(code == 200){
+                    let movies = response.data;
+                    if(movies != null && movies.length > 0){
+                        for (let i=0;i<movies.length;i++){
+                            let movie = movies[i];
+                            let content = $('<div class="col-sm-6 col-md-4">\n' +
+                                '            <div class="thumbnail">\n' +
+                                '                <img class="movie-logo" src="'+movie.logo+'" alt="...">\n' +
+                                '                <div class="caption">\n' +
+                                '                    <h3>'+movie.name+'</h3>\n' +
+                                '                    <p><a href="video.html?id='+movie.id+'" class="btn btn-primary" role="button">观看</a></p>\n' +
+                                '                </div>\n' +
+                                '            </div>\n' +
+                                '        </div>');
+
+                            parentNode.append(content);
+                        }
+                    }
+                }
+            }
+        });
+    }
 </script>
 </html>
