--- a/web/src/main/resources/static/login.html
+++ b/web/src/main/resources/static/login.html
@@ -18,8 +18,8 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/common.js" type="text/javascript"></script>
     <script src="js/head.js" type="text/javascript"></script>
-    <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <script src="js/html5shiv.js"></script>
+    <script src="js/respond.min.js"></script>
     <script src="js/toastr.min.js" type="text/javascript"></script>
 </head>
 <body>
