--- a/web/src/main/resources/static/rank.html
+++ b/web/src/main/resources/static/rank.html
@@ -15,8 +15,8 @@
     <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/head.js" type="text/javascript"></script>
-    <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <script src="js/html5shiv.js"></script>
+    <script src="js/respond.min.js"></script>
 </head>
 <body>
    <div class="container-fluid" id="head-page"></div>
