--- a/web/src/main/resources/static/video.html
+++ b/web/src/main/resources/static/video.html
@@ -19,6 +19,8 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
+    <script src="js/jquery.js" type="text/javascript"></script>
+    <script src="js/common.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/head.js" type="text/javascript"></script>
     <script src="js/html5shiv.js"></script>
@@ -26,7 +28,6 @@
 
     <script src="http://vjs.zencdn.net/5.8.8/video.js"></script>
     <script src="js/jquery.comment.js" type="text/javascript"></script>
-    <script src="js/video-comment.js" type="text/javascript"></script>
 </head>
 <body>
 
@@ -37,7 +38,7 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="container-fluid">
-                    <div class="row">
+                    <div class="row" id="movie-details">
                         <video id="my-video" class="video-js" controls preload="auto" width="640" height="400"
                                poster="http://vjs.zencdn.net/v/oceans.png" data-setup="{}">
                             <source src="http://vjs.zencdn.net/v/oceans.mp4" type='video/mp4'>
@@ -49,7 +50,7 @@
                         </video>
                     </div>
                     <div class="row" style="margin-top: 5px;float: right">
-                        <button class="icobutton icobutton--heart"><span class="fa fa-heart"></span><span class="icobutton__text icobutton__text--side">10</span></button>
+                        <button class="icobutton icobutton--heart"><span class="fa fa-heart"></span><span class="icobutton__text icobutton__text--side" id="favor-count">10</span></button>
                     </div>
                 </div>
             </div>
@@ -122,6 +123,13 @@
 
 <script src="js/mo.min.js" type="text/javascript"></script>
 <script src="js/demo.js" type="text/javascript"></script>
-
+<script src="js/video-comment.js" type="text/javascript"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+/*
+        $(".reply-btn").css("display","none");
+*/
+    });
+</script>
 </body>
 </html>
