--- a/web/src/main/resources/static/type.html
+++ b/web/src/main/resources/static/type.html
@@ -26,8 +26,8 @@
     <div class="row navigation-list" style="margin-top: 10px">
     </div>
 
-    <div class="row content">
-        <div class="col-sm-6 col-md-4">
+    <div class="row content" id="movies">
+<!--        <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
                 <img src="images/timg.jpeg" alt="...">
                 <div class="caption">
@@ -55,14 +55,97 @@
                     <p><a href="video.html" class="btn btn-primary" role="button">Button</a></p>
                 </div>
             </div>
-        </div>
+        </div>-->
+    </div>
+
+    <div class="row" style="text-align: center">
+        <nav aria-label="...">
+            <ul class="pager">
+                <li><a href="#" id="previous">Previous</a></li>
+                <li><a href="#" id="next">Next</a></li>
+            </ul>
+        </nav>
     </div>
 </div>
 </body>
 
 <script type="text/javascript">
     $(document).ready(function () {
+        var type = GetQueryString("type");
+        var page = GetQueryString("page");
+        var size = GetQueryString("size");
 
+        if(type == undefined || type == null || type == ""){
+            alert("错误的电影类型");
+            return;
+        }
+
+        loadPage(type,page,size);
+        getMovies(type,page,size);
+
+
+        function getMovies(type,page,size) {
+            $.ajax({
+                type:"get",
+                url:"/movie/type?type="+type+"&page="+page+"&size="+size,
+                async: true,
+                success:function(response){
+                    var code = response.code;
+                    if(code == 200){
+                        let ms = response.data;
+                        loadM(ms,size);
+                    }
+
+                },
+                error:function(response){
+
+                }
+            });
+        }
+
+        function loadPage(type,page,size) {
+            let pre = $("#previous");
+            let next = $("#next");
+
+            if(page == 1){
+                pre.parent().attr("class",pre.parent().attr("class")+" disabled");
+            }
+
+            let pageNext = Number(page) +1 ;
+            let nextUrl = "type.html?type="+type+"&page="+pageNext+"&size="+size;
+
+            if (page != 1){
+                let pagePre = Number(page) - 1 ;
+
+                let preUrl = "type.html?type="+type+"&page="+pagePre+"&size="+size;
+                pre.attr("href",preUrl);
+            }
+
+            next.attr("href",nextUrl);
+
+        }
+
+        function loadM(ms,size) {
+            if(ms.length < size){
+                $("#next").parent().attr("class",$("#next").parent().attr("class")+" disabled");
+            }
+
+            let movies = $("#movies");
+            for (let i=0;i<ms.length;i++){
+                let movie = ms[i];
+                let content = $('<div class="col-sm-6 col-md-4">\n' +
+                    '            <div class="thumbnail">\n' +
+                    '                <img class="movie-logo" src="'+movie.logo+'" alt="...">\n' +
+                    '                <div class="caption">\n' +
+                    '                    <h3>'+movie.name+'</h3>\n' +
+                    '                    <p><a href="video.html?id='+movie.id+'" class="btn btn-primary" role="button">观看</a></p>\n' +
+                    '                </div>\n' +
+                    '            </div>\n' +
+                    '        </div>');
+
+                movies.append(content);
+            }
+        }
     });
 </script>
 </html>
