--- a/web/src/main/resources/static/video.html
+++ b/web/src/main/resources/static/video.html
@@ -57,8 +57,8 @@
 
             <div class="col-md-4" style="height: 400px;overflow-y:auto">
                 <span>与此相关</span>
-                <div class="list-group">
-                    <a href="#" class="list-group-item active">
+                <div class="list-group" id="similar-movie">
+                    <!--<a href="#" class="list-group-item active">
                         <h4 class="list-group-item-heading">List group item heading</h4>
                         <p class="list-group-item-text">...</p>
                     </a>
@@ -102,7 +102,7 @@
                         <h4 class="list-group-item-heading">List group item heading</h4>
                         <p class="list-group-item-text">...</p>
                     </a>
-
+-->
                 </div>
             </div>
         </div>
@@ -126,9 +126,39 @@
 <script src="js/video-comment.js" type="text/javascript"></script>
 <script type="text/javascript">
     $(document).ready(function () {
-/*
-        $(".reply-btn").css("display","none");
-*/
+
+        let mId = GetQueryString("id");
+        $.ajax({
+            type:"get",
+            url:"/movie/similar?movieId="+mId,
+            async: true,
+            success:function(response){
+                var code = response.code;
+                if(code == 200){
+                    let movies = response.data;
+                    loadSimilarMovie(movies);
+                }
+
+            },
+            error:function(response){
+
+            }
+        });
+
+        var loadSimilarMovie = function (movies) {
+            let parentNode = $("#similar-movie");
+
+            for (let i=0;i<movies.length;i++){
+                let m = movies[i];
+                let movieInfo = $('<a href="video.html?id="'+m.id+' class="list-group-item active">\n' +
+                    '                        <h4 class="list-group-item-heading">'+m.name+'</h4>\n' +
+                    '                        <p class="list-group-item-text">'+m.description+'</p>\n' +
+                    '                    </a>');
+
+                parentNode.append(movieInfo);
+            }
+        }
+
     });
 </script>
 </body>
