--- a/web/src/main/resources/static/type.html
+++ b/web/src/main/resources/static/type.html
@@ -135,7 +135,7 @@
                 let movie = ms[i];
                 let content = $('<div class="col-sm-6 col-md-4">\n' +
                     '            <div class="thumbnail">\n' +
-                    '                <img class="movie-logo" src="'+movie.logo+'" alt="...">\n' +
+                    '                <img style="width: 300px;height: 300px" class="movie-logo" src="'+movie.logo+'" alt="...">\n' +
                     '                <div class="caption">\n' +
                     '                    <h3>'+movie.name+'</h3>\n' +
                     '                    <p><a href="video.html?id='+movie.id+'" class="btn btn-primary" role="button">观看</a></p>\n' +
