--- a/web/src/main/resources/static/video.html
+++ b/web/src/main/resources/static/video.html
@@ -150,7 +150,7 @@
 
             for (let i=0;i<movies.length;i++){
                 let m = movies[i];
-                let movieInfo = $('<a href="video.html?id="'+m.id+' class="list-group-item active">\n' +
+                let movieInfo = $('<a href="video.html?id='+m.id+'" class="list-group-item">\n' +
                     '                        <h4 class="list-group-item-heading">'+m.name+'</h4>\n' +
                     '                        <p class="list-group-item-text">'+m.description+'</p>\n' +
                     '                    </a>');
