--- a/web/src/main/resources/static/rank.html
+++ b/web/src/main/resources/static/rank.html
@@ -13,6 +13,8 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
+    <script src="js/jquery.js" type="text/javascript"></script>
+    <script src="js/common.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/head.js" type="text/javascript"></script>
     <script src="js/html5shiv.js"></script>
@@ -24,8 +26,8 @@
        <div class="row navigation-list" style="margin-top: 10px">
        </div>
 
-       <div class="container">
-           <div class="list-group">
+       <div class="container" id="ranks">
+<!--           <div class="list-group">
                <a href="#" class="list-group-item active">
                    <h4 class="list-group-item-heading">List group item heading</h4>
                    <p class="list-group-item-text">...</p>
@@ -100,9 +102,51 @@
                    <h4 class="list-group-item-heading">List group item heading</h4>
                    <p class="list-group-item-text">...</p>
                </a>
-           </div>
-
+           </div>-->
        </div>
    </div>
 </body>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $.ajax({
+            type:"get",
+            url:"/movie/get_rank",
+            async:true,
+            success:function (response) {
+                var  code = response.code;
+                var  parentNode = $("#home-data");
+                if(code == 200) {
+                    let movies = response.data;
+                    loadRank(movies);
+                }
+            }
+        });
+
+        function loadRank(movies) {
+            var rankTable = $("#ranks");
+            if (movies == undefined || movies == null){
+                rankTable.html("<span>暂无排名.....</span>")
+            }
+
+            for (let i=0;i<movies.length;i++){
+                let movie = movies[i];
+                let num = i+1;
+                let eachMovie = $('\n' +
+                    '           <div class="list-group">\n' +
+                    '               <a href="video.html?id='+movie.id+'" class="list-group-item">\n' +
+                    '<h2 style="float: left">'+num+'</h2>'+
+                    '<div class="container-fluid"><div class="row">' +
+                    '<div class="col-md-4"><img src="'+movie.logo+'" style="width: 100px;height: 100px;"/></div>' +
+                    '<div class="col-md-8"> <h4 class="list-group-item-heading">'+movie.name+'</h4>' +
+                        '<p class="list-group-item-text">'+movie.description+'</p>'+
+                    '</div>'+
+                    '</div></div>'+
+                    '               </a>\n' +
+                    '           </div>');
+
+                rankTable.append(eachMovie);
+            }
+        }
+    });
+</script>
 </html>
