--- a/web/src/main/resources/static/index.html
+++ b/web/src/main/resources/static/index.html
@@ -19,11 +19,14 @@
     <script src="js/head.js" type="text/javascript"></script>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
+    <script src="js/picMove.js"></script>
 </head>
 <body>
 <div class="container-fluid" id="head-page"></div>
+<div class="container-fluid"  id="banner" style="margin: 0px;padding: 0px">
+    <div id="box" style="margin-right: 0px;padding-right: 0px"></div>
+</div>
 <div class="container" id="main-page">
-
     <div class="row navigation-list" style="margin-top: 10px">
     </div>
 
@@ -109,6 +112,32 @@
 </body>
 <script type="text/javascript">
     $(document).ready(function () {
+
+        var list = [{
+            imgUrl: 'images/1111.jpeg',
+            href: 'video.html?id=1'
+        }, {
+            imgUrl: 'images/22222.jpeg',
+            href: 'video.html?id=2'
+        }, {
+            imgUrl: 'images/3333.jpeg',
+            href: 'video.html?id=3'
+        }, {
+            imgUrl: 'images/4444.jpg',
+            href: 'video.html?id=4'
+        }]
+
+        var bannerWith = $("#banner").css("width");
+        bannerWith = bannerWith.substring(0,bannerWith.length-2);
+
+        $('#box').fade({
+            url: list,
+            boxWid:bannerWith,
+            boxHei:400
+        }).css({
+            margin:'0 auto'
+        })
+
         var u = window.storage.typeJson.getJsonByKey("user");
         if(u != null && u != "") {
             loadRecommedation(u);
